--- a/config/settings.yml
+++ b/config/settings.yml
@@ -10,6 +10,7 @@ defaults: &defaults
   site_contact_username: ''
   site_contact_email: ''
   registrations_mode: 'open'
+  max_bio_chars: 500
   max_toot_chars: 500
   profile_directory: true
   closed_registrations_message: ''
