--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "glob": "^7.1.1",
     "history": "^4.7.2",
     "http-link-header": "^1.0.2",
-    "immutable": "^3.8.2",
+    "immutable": "^4.0.0-rc.12",
     "imports-loader": "^0.8.0",
     "intersection-observer": "^0.5.1",
     "intl": "^1.2.5",
@@ -126,7 +126,7 @@
     "react-dom": "^16.8.6",
     "react-hotkeys": "^1.1.4",
     "react-immutable-proptypes": "^2.1.0",
-    "react-immutable-pure-component": "^1.1.1",
+    "react-immutable-pure-component": "^2.2.1",
     "react-intl": "^2.7.2",
     "react-masonry-infinite": "^1.2.2",
     "react-motion": "^0.5.2",
