Update webpack to v4.32.1

--- a/package.json
+++ b/package.json
@@ -70,9 +70,9 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.3.4",
     "array-includes": "^3.0.3",
-    "autoprefixer": "^9.4.10",
+    "autoprefixer": "^9.5.1",
     "axios": "^0.18.0",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^8.0.6",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-preval": "^3.0.1",
     "babel-plugin-react-intl": "^3.0.1",
@@ -91,7 +91,6 @@
     "escape-html": "^1.0.3",
     "exif-js": "^2.3.0",
     "express": "^4.16.4",
-    "fibers": "^3.1.1",
     "file-loader": "^3.0.1",
     "font-awesome": "^4.7.0",
     "glob": "^7.1.1",
@@ -108,13 +107,13 @@
     "lodash": "^4.7.11",
     "mark-loader": "^0.1.6",
     "marky": "^1.2.1",
-    "mini-css-extract-plugin": "^0.5.0",
+    "mini-css-extract-plugin": "^0.6.0",
     "mkdirp": "^0.5.1",
     "npmlog": "^4.1.2",
     "object-assign": "^4.1.1",
     "object-fit-images": "^3.2.3",
     "object.values": "^1.0.4",
-    "offline-plugin": "^5.0.6",
+    "offline-plugin": "^5.0.7",
     "path-complete-extname": "^1.0.0",
     "pg": "^6.4.0",
     "postcss-loader": "^3.0.0",
@@ -149,19 +148,19 @@
     "requestidlecallback": "^0.3.0",
     "reselect": "^4.0.0",
     "rimraf": "^2.6.1",
-    "sass": "^1.17.2",
+    "sass": "^1.20.1",
     "sass-loader": "^7.0.3",
     "stringz": "^1.0.0",
     "substring-trie": "^1.0.2",
+    "terser-webpack-plugin": "^1.2.4",
     "throng": "^4.0.0",
     "tiny-queue": "^0.2.1",
-    "uglifyjs-webpack-plugin": "^2.1.2",
     "uuid": "^3.1.0",
     "uws": "10.148.0",
-    "webpack": "^4.29.6",
+    "webpack": "^4.32.1",
     "webpack-assets-manifest": "^3.1.1",
-    "webpack-bundle-analyzer": "^3.1.0",
-    "webpack-cli": "^3.2.3",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.3.2",
     "webpack-merge": "^4.2.1",
     "websocket.js": "^0.1.12"
   },
@@ -179,7 +178,7 @@
     "raf": "^3.4.1",
     "react-intl-translations-manager": "^5.0.3",
     "react-test-renderer": "^16.8.6",
-    "webpack-dev-server": "^3.2.1",
+    "webpack-dev-server": "^3.4.1",
     "yargs": "^12.0.5"
   }
 }
