Add a featured link

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -15,6 +15,7 @@ defaults: &defaults
   open_deletion: true
   min_invite_role: 'admin'
   timeline_preview: true
+  featured_link: false
   show_staff_badge: true
   default_sensitive: false
   hide_network: false
