--- a/config/settings.yml
+++ b/config/settings.yml
@@ -17,7 +17,7 @@ defaults: &defaults
   timeline_preview: true
   show_staff_badge: true
   default_sensitive: false
-  hide_network: false
+  hide_network: true
   unfollow_modal: false
   boost_modal: false
   delete_modal: true
@@ -28,7 +28,7 @@ defaults: &defaults
   reduce_motion: false
   show_application: true
   system_font_ui: false
-  noindex: false
+  noindex: true
   theme: 'default'
   aggregate_reblogs: true
   advanced_layout: true
