--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -85,6 +85,9 @@ Rails/Exit:
     - 'lib/mastodon/*'
     - 'lib/cli.rb'
 
+Rails/HelperInstanceVariable:
+  Enabled: false
+
 Style/ClassAndModuleChildren:
   Enabled: false
 
