--- a/config/settings.yml
+++ b/config/settings.yml
@@ -31,7 +31,7 @@ defaults: &defaults
   noindex: false
   theme: 'default'
   aggregate_reblogs: true
-  advanced_layout: false
+  advanced_layout: true 
   notification_emails:
     follow: false
     reblog: false
