Initial push from local

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -54,6 +54,49 @@ defaults: &defaults
     - administrator
     - mod
     - moderator
+    - allah
+    - god
+    - jezus
+    - jesus
+    - hitler
+    - stalin
+    - mao
+    - trump
+    - bolsonaro
+    - duterte
+    - wilders
+    - mussolini
+    - islam
+    - moslim
+    - moslima
+    - muslim
+    - christen
+    - christian
+    - jood
+    - jew
+    - anarchist
+    - anarcho
+    - anarcha
+    - anarchisme
+    - anarchism
+    - socialist
+    - communist
+    - liberaal
+    - christen
+    - christ
+    - christelijk
+    - fascist
+    - racist
+    - nazi
+    - pvv
+    - baudet
+    - thierry
+    - hiddema
+    - fvd
+    - todon
+    - mastodon
+    - gargron
+
   disallowed_hashtags: # space separated string or list of hashtags without the hash
   bootstrap_timeline_accounts: ''
   activity_api_enabled: true
