--- a/.env.production.sample
+++ b/.env.production.sample
@@ -231,3 +231,9 @@ STREAMING_CLUSTER_NUM=1
 # http_proxy=http://gateway.local:8118
 # Access control for hidden service.
 # ALLOW_ACCESS_TO_HIDDEN_SERVICE=true
+
+# Mastodon auto-silences and auto-reports accounts based on anti-spam measures
+# such as detecting accounts who sent multiple similar unsolicited messages.
+# You can turn those checks of if there are too many false positives and they
+# become an issue.
+# DISABLE_SPAM_CHECK=true
