--- a/config/settings.yml
+++ b/config/settings.yml
@@ -60,6 +60,7 @@ defaults: &defaults
   activity_api_enabled: true
   peers_api_enabled: true
   show_known_fediverse_at_about_page: true
+  antispam_enabled: true
 
 development:
   <<: *defaults
